Adicionada configuração para o Travis Ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: bionic
 language: php
 php:
     - '7.4'
-script: phpunit
+script: vendor/bin/phpunit
 install: composer install
 cache:
     directories:
